added animations, register password confirmation

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     <!-- Content -->
     <div class="container">
       <form name="loginForm">
+        <img src="/assets/images/logoCircled.png" alt="">
         <h1>Welcome back</h1>
         <p>Welcome back! Please enter your details.</p>
         <label for="email">Email</label>
