--- a/register.html
+++ b/register.html
@@ -74,6 +74,13 @@
           id="password"
           placeholder="Password"
         />
+        <label for="confirmPassword">Confirm password</label>
+        <input
+          type="password"
+          name="confirmPassword"
+          id="confirmPassword"
+          placeholder="Confirm password"
+        />
         <input class="btn-primary" type="submit" value="Register" />
       </form>
       <div class="options">
