cleaned code, added searchquery

--- a/addlog.html
+++ b/addlog.html
@@ -60,7 +60,7 @@
     </header>
     <!-- Content -->
     <div class="container">
-      <h1>Add log</h1>
+      <h1>Add a log</h1>
       <p>Fill in form details.</p>
       <form name="addlog">
         <label for="description">Symptoms, injury or illness description</label>
@@ -70,7 +70,7 @@
           id="description"
           placeholder="Description"
         />
-        <label for="status">Status (recovering, healthy...)</label>
+        <label for="status">Status (recovering, healthy, injured...)</label>
         <input
           type="text"
           name="status"
