--- a/home.html
+++ b/home.html
@@ -68,6 +68,10 @@
           Add pet
         </button>
       </section>
+      <!-- Search -->
+      <div class="filter">
+      <input type="search" name="search" id="search" placeholder="Enter a name of the pet">
+    </div>
       <div class="boxes">            
           </div>
       </div>
