--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <form name="loginForm">
         <img src="/assets/images/logoCircled.png" alt="">
         <h1>Welcome back</h1>
-        <p>Welcome back! Please enter your details.</p>
+        <p>Please enter your details.</p>
         <label for="email">Email</label>
         <input
           type="email"
@@ -84,13 +84,6 @@
         <input class="btn-primary" type="submit" value="Login" />
       </form>
       <div class="options">
-        <!-- <button
-          type="button"
-          class="btn-primary"
-          onclick="window.location='./changepassword.html'"
-        >
-          Change Password
-        </button> -->
         <p>Don't have an account?</p>
         <button
           type="button"
