--- a/logs.html
+++ b/logs.html
@@ -75,7 +75,7 @@
         </div>
       </section>
       <h2></h2>
-      <div class="boxes logs"></div>
+      <div class="boxes logs">No logs found...</div>
     </div>
     <!-- JS -->
     <script src="./js/hamburger.js"></script>
