--- a/register.html
+++ b/register.html
@@ -55,7 +55,7 @@
     <!-- Content -->
     <div class="container">
       <form name="registerForm">
-        <h2>Register new account</h2>
+        <h2>Register a new account</h2>
         <p>Fill in your details.</p>
         <label for="name">First Name</label>
         <input type="text" name="name" id="name" placeholder="First name" />
