hide search bar, when no pets

--- a/home.html
+++ b/home.html
@@ -69,7 +69,7 @@
         </button>
       </section>
       <!-- Search -->
-      <div class="filter">
+      <div class="filter hide">
       <input type="search" name="search" id="search" placeholder="Enter a name of the pet">
     </div>
       <div class="boxes">            
