html gramma, added login icon to register page

--- a/addpet.html
+++ b/addpet.html
@@ -73,7 +73,7 @@
           placeholder="Owner's email"
           required
         />
-        <label for="age">How old is your pet?</label>
+        <label for="age">How old is the pet?</label>
         <input
           type="number"
           name="age"
