--- a/register.html
+++ b/register.html
@@ -87,10 +87,11 @@
         <p>Already have an account?</p>
         <button
           type="button"
-          class="btn-clean"
+          class="btn-clean goBack"
           onclick="window.location='./index.html'"
         >
           Login
+          <i class="fa-solid fa-rotate-left"></i>
         </button>
       </div>
     </div>
