--- a/resetpassword.html
+++ b/resetpassword.html
@@ -57,8 +57,8 @@
       <form name="resetpassword">
         <h2>Reset password</h2>
         <p>
-          Enter your email, if email exist in the database, you will receive new
-          password.
+          Enter your email. If provided email exist in the database, you will
+          receive a new password.
         </p>
         <label for="email">Email</label>
         <input
