added filter to logs and prescription

--- a/logs.html
+++ b/logs.html
@@ -74,7 +74,16 @@
           </button>
         </div>
       </section>
+      <section>
+        <div class="options">
+          <button id="filterLogs" class="btn-secondary">Logs</button>
+          <button id="filterPrescriptions" class="btn-secondary">
+            Prescriptions
+          </button>
+        </div>
+      </section>
       <h2></h2>
+      <p></p>
       <div class="boxes logs">No logs found...</div>
     </div>
     <!-- JS -->
