--- a/addpet.html
+++ b/addpet.html
@@ -62,7 +62,7 @@
     <div class="container">
       <h2>Add a pet.</h2>
       <p>Fill in details about the pet.</p>
-      <form name="addPetForm">
+      <form name="addPetForm" enctype="multipart/form-data">
         <label for="name">Pet name</label>
         <input type="text" name="name" id="name" placeholder="Name" required />
         <label for="clientEmail">Owner's email</label>
@@ -76,6 +76,7 @@
         <label for="age">How old is the pet?</label>
         <input
           type="number"
+          id="age"
           name="age"
           min="1"
           max="100"
