--- a/addprescription.html
+++ b/addprescription.html
@@ -64,7 +64,13 @@
       <p>Fill in prescription details for <span id="dogName"></span>.</p>
       <form name="addprescription">
         <label for="comment">Comment about prescription</label>
-        <input type="text" name="comment" id="comment" placeholder="Comment" />
+        <input
+          type="text"
+          name="comment"
+          id="comment"
+          placeholder="Comment"
+          required
+        />
         <label for="select">Select medication for prescription</label>
         <select name="select" id="select"></select>
         <input
