--- a/resetpassword.html
+++ b/resetpassword.html
@@ -31,7 +31,7 @@
     <!-- Header -->
     <header>
       <div class="container">
-        <div class="logo">
+        <div onclick="window.location='index.html'" class="logo">
           <img src="/assets/images/logoCircled.png" alt="VetPaw" />
           <div class="logo-title">Vet<span>Paw</span></div>
         </div>
