--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- Header -->
     <header>
       <div class="container">
-        <div class="logo">
+        <div onclick="window.location='index.html'" class="logo">
           <img src="/assets/images/logoCircled.png" alt="VetPaw" />
           <div class="logo-title">Vet<span>Paw</span></div>
         </div>
@@ -40,14 +40,12 @@
         </div>
         <!-- Desktop nav -->
         <nav class="desktop-nav">
-          <li><a href="index.html">Login</a></li>
           <li><a href="register.html">Register</a></li>
         </nav>
       </div>
       <div class="container">
         <!-- Mobile nav -->
         <nav class="mobile-nav">
-          <li><a href="index.html">Login</a></li>
           <li><a href="register.html">Register</a></li>
         </nav>
       </div>
