--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
         </div>
         <!-- Desktop nav -->
         <nav class="desktop-nav">
-          <li><a href="register.html">Register</a></li>
+          <li><a href="./views/register.html">Register</a></li>
         </nav>
       </div>
       <div class="container">
         <!-- Mobile nav -->
         <nav class="mobile-nav">
-          <li><a href="register.html">Register</a></li>
+          <li><a href="./views/register.html">Register</a></li>
         </nav>
       </div>
     </header>
@@ -75,7 +75,7 @@
         <button
           type="button"
           class="btn-clean"
-          onclick="window.location='./resetpassword.html'"
+          onclick="window.location='./views/resetpassword.html'"
         >
           Forgot password
         </button>
@@ -86,7 +86,7 @@
         <button
           type="button"
           class="btn-clean"
-          onclick="window.location='./register.html'"
+          onclick="window.location='./views/register.html'"
         >
           Register
         </button>
