added popup notification

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
       </div>
     </div>
     <!-- JS -->
+    <script src="./js/notification.js"></script>
     <script src="./js/hamburger.js"></script>
     <script src="./js/index.js"></script>
   </body>
